Connexion et ajout utilisateur avec MDP hashé
